# axum-exercise

./: Cargo.toml  README.md  manager
blog_system/: Cargo.toml  READ.md
blog_system/src/: config.rs  cookie.rs  error.rs  form.rs  handler.rs  lib.rs  md.rs  middleware.rs  models.rs  password.rs
blog_system/src/backend/: handler.rs  mod.rs  view.rs
blog_system/src/backend/handlers/: auth.rs  category.rs  index.rs  mod.rs  topic.rs
blog_system/src/db/: catefories.sql  mod.rs  postgres_implement.rs  structs.rs  topic_view.sql  topics.sql  traits.rs  usr.sql
blog_system/src/frontend/: handler.rs  mod.rs  view.rs
blog_system/src/handler/: mod.rs
blog_system/src/handler/backend/: index.rs  mod.rs
blog_system/src/handler/fronted/: index.rs
blog_system/src/handler/frontend/: index.rs
blog_system/src/view/: mod.rs
blog_system/src/view/backend/: index.rs
blog_system/src/view/fronted/: index.rs  mod.rs
blog_system/src/view/frontend/: index.rs
blog_system/templates/backend/: base.html
blog_system/templates/backend/topic/: add.html
blog_system/templates/fronted/: base.html
blog_system/templates/frontend/: base.html
roaming/: Cargo.toml
roaming/configs/: test_config.toml
roaming/src/: init.sql
roaming/static/: axum-rs.txt
roaming/templates/: index.html  login_page.html  upload.html
todo_system/: Cargo.toml
todo_system/src/: configs.toml  errors.rs  handlers.rs  lib.rs  structs.rs
todo_system/src/db/: mod.rs  todo_item.rs  todo_list.rs
