[package]
name = "blog_system"
version = "0.1.0"
edition = "2021"
authors = ["Rex Wang <wxyinucas@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# server
tokio = { version = "1", features = ["full"] }
axum = "0.5"

# storage
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }

# template
askama = "0.11"

# configuration
toml = "0.5"

# tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# markdown
pulldown-cmark = "0.9"

# error handling
anyhow = "1"
thiserror = "1"