[package]
name = "roaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.2", features = ["trace", "fs"] }
serde_json = "1"


tracing = "0.1"
tracing-subscriber = "0.3"