[package]
name = "roaming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5", features = ["headers", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.3", features = ["trace", "fs"] }
serde_json = "1"

# tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# storage
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"] }
redis = { version = "0.21", features = ["aio", "tokio-comp"] }

# jwt
jsonwebtoken = "8"


# template
askama = "0.11"

# uuid
uuid = { version = "1", features = ["v4"] }